--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-SERVICE_NAME="Seidor WS"
-SERVICE_DESCRIPTION="Seidor default web service with Hono"
-SERVICE_BIN_PATH="./bin/app.exe"
+# Default values for environment variables
+
+SC_START=SERVICE_DELAYED_AUTO_START
+SC_DEPENDENCIES='B1LicenseService,b1s50000'
