--- a/.env.production
+++ b/.env.production
@@ -26,29 +26,31 @@
 #Windows Service configuration (Mandatory for Windows Service deployment)
 
   # Service name (ID)
-  SC_NAME='SeidorExampleService'
+  SC_NAME='SeidorExampleServiceProd'
 
-  # Service executable path
-  SC_EXE=''
-  SC_EXE_DIR=''
-  
 
 #Windows Service configuration (Optional for Windows Service deployment)
+  
+  # Service executable path
+  SC_EXE=
+  
+  # Service executable directory
+  SC_EXE_DIR=
 
   # Service display name on Windows Services
-  SC_DISPLAY_NAME=
+  SC_DISPLAY_NAME="Seidor Example Web Service (PRODUCTION)"
 
   # Service description on Windows Services
-  SC_DESCRIPTION=
+  SC_DESCRIPTION="Web Service for Seidor (PRODUCTION)"
   
-  # Service start method: SERVICE_DELAYED_AUTO_START (delayed automatic) | SERVICE_AUTO_START (automatic)* | SERVICE_DEMAND_START (manual start) | SERVICE_DISABLED (disabled)
-  SC_START=
+  # Service start method: SERVICE_AUTO_START (automatic)* | SERVICE_DELAYED_AUTO_START (delayed automatic) | SERVICE_DEMAND_START (manual start) | SERVICE_DISABLED (disabled)
+  SC_START=SERVICE_DELAYED_AUTO_START
 
   # Service type: SERVICE_WIN32_OWN_PROCESS (standalone)* | SERVICE_INTERACTIVE_PROCESS (interactive with desktop)
   SC_TYPE=
 
   # Service dependencies (comma separated)
-  SC_DEPENDENCIES=
+  SC_DEPENDENCIES='B1LicenseService,b1s50000'
 
   # Service Output log file path
   SC_LOG_OUTPUT=
@@ -56,14 +58,10 @@
   # Service Error log file path
   SC_LOG_ERROR=
 
-  # Service Log use log rotation : 1 (enabled) | 0 (disabled)
-  SC_LOG_ROTATION=
-
   # Service Log max size in bytes
   SC_LOG_MAX_SIZE=
 
   # Service Log max time in seconds
   SC_LOG_MAX_TIME=
-
 
 #--------------------------------------------------------------------------------------------
