--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "deploy-prod": "NODE_ENV=production bun run scripts/deploy.ts",
     "undeploy-test": "NODE_ENV=test bun run scripts/undeploy.ts",
     "undeploy-prod": "NODE_ENV=production bun run scripts/undeploy.ts",
+    "deploy-edit-test": "NODE_ENV=test bun run scripts/deploy-edit.ts",
+    "deploy-edit-prod": "NODE_ENV=production bun run scripts/deploy-edit.ts",
     "compile-test": "bun build --compile --minify --sourcemap src/index.ts --outfile bin/test/app-test-x64",
     "compile-prod": "bun build --compile --minify --sourcemap src/index.ts --outfile bin/production/app-prod-x64",
     "exec-test": "NODE_ENV=test ./bin/test/app-test-x64",
