build command in progress

--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
 {
   "scripts": {
     "dev": "NODE_ENV=development bun run --hot src/index.ts",
-    "start-test": "NODE_ENV=test bun run src/index.ts",
-    "start-prod": "NODE_ENV=production bun run src/index.ts",
-    "deploy-test": "NODE_ENV=test bun run scripts/deploy.ts",
-    "deploy-prod": "NODE_ENV=production bun run scripts/deploy.ts",
-    "undeploy-test": "NODE_ENV=test bun run scripts/undeploy.ts",
-    "undeploy-prod": "NODE_ENV=production bun run scripts/undeploy.ts",
-    "deploy-edit-test": "NODE_ENV=test bun run scripts/deploy-edit.ts",
-    "deploy-edit-prod": "NODE_ENV=production bun run scripts/deploy-edit.ts",
-    "compile-test": "bun build --compile --minify --sourcemap src/index.ts --outfile bin/test/app-test-x64",
-    "compile-prod": "bun build --compile --minify --sourcemap src/index.ts --outfile bin/production/app-prod-x64",
-    "exec-test": "NODE_ENV=test ./bin/test/app-test-x64",
-    "exec-prod": "NODE_ENV=production ./bin/production/app-prod-x64"
+    "start:test": "NODE_ENV=test bun run src/index.ts",
+    "start:prod": "NODE_ENV=production bun run src/index.ts",
+    "deploy-service:all": "bun deploy-service:test && bun deploy-service:prod",
+    "deploy-service:test": "NODE_ENV=test bun run scripts/deploy-service.ts",
+    "deploy-service:prod": "NODE_ENV=production bun run scripts/deploy-service.ts",
+    "remove-service:all": "bun remove-service:test && bun remove-service:prod",
+    "remove-service:test": "NODE_ENV=test bun run scripts/remove-service.ts",
+    "remove-service:prod": "NODE_ENV=production bun run scripts/remove-service.ts",
+    "stop-service:all": "bun stop-service:test && bun stop-service:prod",
+    "stop-service:test": "NODE_ENV=test bun run scripts/stop-service.ts",
+    "stop-service:prod": "NODE_ENV=production bun run scripts/stop-service.ts",
+    "edit-service:test": "NODE_ENV=test bun run scripts/edit-service.ts",
+    "edit-service:prod": "NODE_ENV=production bun run scripts/edit-service.ts",
+    "build:all": "bun build:test && bun build:prod",
+    "build:test": "NODE_ENV=test bun run scripts/build.ts",
+    "build:prod": "NODE_ENV=production bun run scripts/build.ts",
+    "exec-service:test": "NODE_ENV=test ./bin/test/app-test-x64",
+    "exec-setvice:prod": "NODE_ENV=production ./bin/production/app-prod-x64"
   },
   "dependencies": {
     "@t3-oss/env-core": "^0.10.1",
